# psensor

./: AUTHORS  Makefile.am  Makefile.in  NEWS  NEWS.html  README  README.html  aclocal.m4  ar-lib  config.h.in  configure  configure.ac  psensor.desktop
debian/: changelog  control  copyright  psensor-common.install  psensor-server.install  psensor-server.links  psensor-server.manpages  psensor.install  rules  watch
debian-squeeze-packaging/: changelog  control  copyright  psensor-server.install  psensor-server.links  psensor.install  psensor.manpages  watch
doc/: Makefile.am  Makefile.in  TODO.html  TODO.txt  faq.html  faq.txt
icons/14x14/: Makefile.in
icons/16x16/: Makefile.in
icons/22x22/: Makefile.in
icons/24x24/: Makefile.am  Makefile.in
icons/32x32/: Makefile.in
icons/48x48/: Makefile.in
icons/64x64/: Makefile.in
icons/hicolor/14x14/: Makefile.in
icons/hicolor/16x16/: Makefile.in
icons/hicolor/22x22/: Makefile.in
icons/hicolor/24x24/: Makefile.in
icons/hicolor/32x32/: Makefile.in
icons/hicolor/48x48/: Makefile.am  Makefile.in
icons/hicolor/64x64/: Makefile.am  Makefile.in
icons/hicolor/scalable/: Makefile.am  Makefile.in
icons/scalable/: Makefile.in
icons/ubuntu-mono-dark/apps/22/: Makefile.am  Makefile.in
icons/ubuntu-mono-dark/status/22/: Makefile.am  Makefile.in
icons/ubuntu-mono-light/status/22/: Makefile.am  Makefile.in
pixmaps/14x14/: Makefile.am  Makefile.in
pixmaps/16x16/: Makefile.am  Makefile.in
pixmaps/22x22/: Makefile.am  Makefile.in
pixmaps/24x24/: Makefile.in
pixmaps/32x32/: Makefile.am  Makefile.in
pixmaps/48x48/: Makefile.in
pixmaps/64x64/: Makefile.in
pixmaps/scalable/: Makefile.in
po/: LINGUAS  Makefile.in  POTFILES.in  de.po  el.po  es.po  fr.po  hr.po  hu.po  it.po  lv.po  nl.po  pl.po  psensor.pot  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
scripts/: base.supp  build_x32.sh  check.sh  cppcheck.sh  fontconfig.supp  gail.supp  gdk.supp  gio.supp  glib.supp  glibc.supp  gtk.supp  gtk3.supp  gtksourceview.supp  merge_tr_lp.sh  pango.supp  smatch.sh  val_psensor.sh
src/: Makefile.am  Makefile.in  cfg.c  cfg.h  compat.h  description.txt  graph.c  graph.h  main.c  notify_cmd.c  notify_cmd.h  psensor.gschema.xml  psensor.schemas  pxdg.c  pxdg.h  rsensor.c  rsensor.h  ui.c  ui.h  ui_appindicator.c  ui_appindicator.h  ui_color.c  ui_color.h  ui_graph.c  ui_graph.h  ui_notify.c  ui_notify.h  ui_pref.c  ui_pref.h  ui_sensorlist.c  ui_sensorlist.h  ui_sensorpref.c  ui_sensorpref.h  ui_status.c  ui_status.h  ui_unity.c  ui_unity.h
src/glade/: Makefile.am  Makefile.in  psensor-appindicator.glade  psensor-pref.glade  psensor.glade  sensor-edit.glade
src/httpd/: Makefile.am  httpd.c  httpd.h
src/lib/: Makefile.am  Makefile.in  amd.c  amd.h  bool.h  color.c  color.h  cpu.c  cpu.h  hdd.c  hdd.h  hdd_atasmart.c  hdd_hddtemp.c  lmsensor.c  lmsensor.h  log.c  log.h  measure.c  measure.h  nvidia.c  nvidia.h  p_io.c  p_io.h  parray.h  pgtop2.c  pgtop2.h  pio.c  pio.h  plog.c  plog.h  pmem.c  pmem.h  pmutex.c  pmutex.h  psensor.c  psensor.h  psensor_json.c  psensor_json.h  ptime.c  ptime.h  (+8 more)
src/libpsensor_json/: Makefile.am  Makefile.in  psensor_json.c  psensor_json.h
src/plib/: Makefile.am  Makefile.in  plib_io.c  plib_io.h  plib_luatpl.c  plib_luatpl.h  url.c  url.h
src/server/: Makefile.am  Makefile.in  description.txt  server.c  server.h  server_lua.c  server_lua.h  sysinfo.c  sysinfo.h
src/unity/: Makefile.am  Makefile.in  ui_unity.c  ui_unity.h
tests/: Makefile.am  Makefile.in  checkpatch.pl  spelling.txt  test-cppcheck.sh  test-io-dir-list.sh  test_io_dir_list.c  test_psensor_type_to_unit_str.c  test_psensor_value_to_str.c  test_url_encode.c  test_url_normalize.c
ubuntu-packaging/: control
ubuntu-packaging/debian/: control
www/: Makefile.am  Makefile.in  details.html  index.html  index.lua  monitor.html  monitor.lua  psensor.js  style.css
