SUBDIRS = po\
 src\
 icons/scalable\
 icons/14x14\
 icons/16x16\
 icons/22x22\
 icons/24x24\
 icons/32x32\
 icons/48x48\
 icons/64x64\
 www\
 tests

dist_doc_DATA = README COPYING NEWS AUTHORS INSTALL

autostartdir = $(sysconfdir)/xdg/autostart
autostart_DATA = psensor.desktop

desktopdir = $(datadir)/applications
desktop_DATA = psensor.desktop

EXTRA_DIST = $(desktop_DATA) $(autostart_DATA)


